--- a/application.yml
+++ b/application.yml
@@ -1,11 +1,13 @@
 spring:
   profiles:
     active: dev
+ # 开发环境
 spring:
   profiles: dev
-    application:
-      name: spring-cloud-config-dev    
+  application:
+      name:  spring-cloud-config-dev
+ # 开发环境
 spring:
   profiles: test
-    application:
-      name: spring-cloud-config-test
+  application:
+      name:  spring-cloud-config-test
